--- a/Thesis.bib
+++ b/Thesis.bib
@@ -2870,7 +2870,23 @@ author = "S. Brandt and Ch. Peyrou and R. Sosnowski and A. Wroblewski"
   title = {A multiple-interaction model for the event structure in hadron collisions},
   issue = {7},
   publisher = {American Physical Society},
-  pages = {2019 -- 2041}
+  pages = {2019--2041}
+}
+
+@article{Butterworth:1996zw,
+      author         = "Butterworth, J.M. and Forshaw, Jeffrey R. and Seymour,
+                        M.H.",
+      title          = "{Multiparton interactions in photoproduction at HERA}",
+      journal        = "Z. Phys. C",
+      volume         = "72",
+      pages          = "637--646",
+      doi            = "10.1007/s002880050286",
+      year           = "1996",
+      eprint         = "hep-ph/9601371",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-TH-96-82, M-C-TH-96-05, UCL-HEP-96-02",
+      SLACcitation   = "%%CITATION = HEP-PH/9601371;%%",
 }
 
 @article{Chatrchyan:2011id,
@@ -2886,6 +2902,19 @@ author = "S. Brandt and Ch. Peyrou and R. Sosnowski and A. Wroblewski"
       primaryClass   = "hep-ex",
       reportNumber   = "CMS-PAS-QCD-10-010, CERN-PH-EP-2011-059",
       SLACcitation   = "%%CITATION = ARXIV:1107.0330;%%",
+}
+
+@article{Chatrchyan:1439302,
+      author        = "Chatrchyan, Serguei and Khachatryan, Vardan and others",
+      title         = "{Measurement of the underlying event in the Drell-Yan
+                       process in proton-proton collisions at $\sqrt{s}$ = 7 TeV}",
+      journal       = "Eur. Phys. J. C",
+      collaboration = "CMS",
+      eprint        = "1204.1411",
+      volume        = "72",
+      pages         = "2080. 35 p",
+      doi           = "10.1140/epjc/s10052-012-2080-4",
+      year          = "2012",
 }
 
 @article{Chatrchyan:2013gfi,
